move test case to test folder

--- a/collated/A0133948W.md
+++ b/collated/A0133948W.md
@@ -362,6 +362,7 @@ public class SystemTest {
 		lc.executeCommand(cmd);
 		cmd = cmp.getCommandPackage("undo");
 		lc.executeCommand(cmd);
+		System.out.println(lc.getTaskList().toString());
 		size = lc.getTaskList().size();
 		assertEquals(5, size);
 		cmd = cmp.getCommandPackage("redo");
@@ -451,9 +452,6 @@ public class SystemTest {
 		cmd = cmp.getCommandPackage("search 9-Dec");
 		lc.executeCommand(cmd);
 		assertEquals(1, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search today");
-		lc.executeCommand(cmd);
-		assertEquals(5, lc.getTaskList().size());
 	}
 
 	@Test
@@ -520,6 +518,84 @@ public class SystemTest {
 		cmd = cmp.getCommandPackage("search done");
 		lc.executeCommand(cmd);
 		assertEquals(3, lc.getTaskList().size());
+	}
+	
+	@Test
+	public void test5(){
+		//test: invalid command
+		CommandParser cmp = CommandParser.getInstance();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		try {
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("add meeting #4");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("add meeting #-1");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("add meeting1 9-Oct");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("delete party");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("delete 2");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `party `name `meeting");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `2 `name `meeting");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `meeting1 `starttime `what");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `meeting1 `# `4");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("mark party");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("search 9-Nov 9pm");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("search #4");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("sort abc");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		assertEquals(1, lc.getTaskList().size());
+		
 	}
 }
 ```
@@ -950,7 +1026,7 @@ public class Storage {
 				taskInfo[3] = null;
 			}
 			if (taskInfo[3] != null && taskInfo[3] != "") {
-				;
+				
 				taskToRead.setPriority(Integer.parseInt(taskInfo[3]));
 			}
 			if(done == false){
