--- a/collated/A0133949U.md
+++ b/collated/A0133949U.md
@@ -59,12 +59,9 @@ public class AddCommand extends Command {
 ``` java
 package logic.command;
 
-import java.util.ArrayList;
-
 import logic.Command;
 import logic.CommandType;
 import logic.Manager;
-import parser.CommandPackage;
 
 public class ClearCommand extends Command{
 	CommandType ct;
@@ -145,6 +142,7 @@ public class DeleteCommand extends Command{
 			}
 			
 			if(found == false){
+				System.out.println("im here!!!!");
 				throw new InvalidCommandException("Task not found");
 			}
 			
@@ -162,9 +160,8 @@ public class DeleteCommand extends Command{
 			Task t;
 			if (isInteger(deleteInfo, 10)) { // delete by index
 				searchIndex = Integer.parseInt(deleteInfo)-1;
-				
-				
 				if(searchIndex<searchList.size()  && searchIndex>=0){
+					
 					found =true;
 					t= searchList.get(searchIndex);				
 					Task temp;
@@ -172,6 +169,7 @@ public class DeleteCommand extends Command{
 					for (int i = 0; i < taskList.size(); i++) {
 						temp = taskList.get(i);
 						if (temp.equals(t)) {
+							found= true;
 							taskIndex=i;
 							break;
 						}
@@ -569,92 +567,112 @@ public class UpdateCommand extends Command{
 		boolean found=false;
 		String msg="";
 		ArrayList<Task> taskList = mgr.getTaskList();
-
-		for (int i = 0; i < taskList.size(); i++) {
-			task = taskList.get(i);
-
-			if (task.getName().equals(target)) { // found the task to be updated
-                found=true;
-                newTask= copyOf(task);
-                
-				if (update.get(2).equalsIgnoreCase("name")) {
-					if (update.get(3) == null) {
-						throw new InvalidCommandException("What's the new name?");
-					}
-					
-					assert update.get(3)!=null;
-					newTask.setTaskName(update.get(3));
-					
-					msg = "Task \""+target+"\" updated to \""+task.getName()+"\"";
-
-				} else if (update.get(2).equals("#") || 
-					update.get(2).equalsIgnoreCase("priority")) {
-					System.out.println("update p: "+update.get(3));
-					if (update.get(3) == null) {
-						throw new InvalidCommandException("What's the new priority?");
-					}
-					
-					if (update.get(3).equals("remove") || update.get(3).equals("delete")) {
-						newTask.setPriority(null);
-						msg = "priority removed";
-						
-					}else if(!isInteger(update.get(3),10)){
-						throw new InvalidCommandException("Priority should be an integer");
-						
-					}else if(isInteger(update.get(3),10)){
-						int priority = Integer.parseInt(update.get(3));	
-						
-						if(priority>3 || priority<=0){		
-							throw new InvalidCommandException
-							("Invalid priority.Priority is valid from 1 to 3");
-						}
-						
-						newTask.setPriority(priority);
-						msg = "Task \""+target+"\" priority updated to \""+priority+"\"";
-					}
-
-				} else if (update.get(2).equalsIgnoreCase("startTime")) {
-					
-					if (update.get(3) == null) {
-						throw new InvalidCommandException("What's the new start time?");
-					}
-					if (update.get(3) == "remove" || update.get(3)=="delete") {
-						newTask.setStartTime(null);;
-						msg = "priority removed";
-					}else{
-						newTask.setStartTime(commandInfo.startingTime());
-						msg = "Task \""+target+"\" start time updated";
-					}
-					
-					
-				} else if (update.get(2).equalsIgnoreCase("endTime")) {
-					if (update.get(3) == null) {
-						throw new InvalidCommandException("What's the new end time?");
-					}
-					if (update.get(3) == "remove" || update.get(3)=="delete") {
-						newTask.setEndTime(null);
-						msg = "priority removed";
-					}else{
-						newTask.setEndTime(commandInfo.endingTime());
-						msg = "Task \""+target+"\" end time updated";
-					}
-					
-					
-				} else{
-					throw new InvalidCommandException("Invalid update type. You can"
-							+ "update name/priority/startTime/endTime");
-				}
-
-				System.out.print(newTask.toString());
-				mgr.update(i, newTask);
-				
-				return msg;
-				
-			}
-
+		int targetIndex=-1;
+		String updateType="";
+		
+		if(isInteger(target,10)==true){
+			targetIndex = Integer.parseInt(target)-1;
 		}
 		
-		return "Task not Found";
+		if(targetIndex<taskList.size() &&  targetIndex>=0 ){
+			found=true;
+		}else{ 
+			for (int i = 0; i < taskList.size(); i++) {
+				task = taskList.get(i);
+				if (task.getName().equals(target)){
+					found = true;
+					targetIndex = i;
+					break;
+				}
+			}
+		}
+		
+		task = taskList.get(targetIndex);
+		
+		if(found == false){
+			
+			throw new InvalidCommandException("Task not found.Is the index or name correct?");
+			
+		}else{//found == true
+			
+			newTask= copyOf(task);
+			
+			if (update.get(2).equalsIgnoreCase("name")) {
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new name?");
+				}
+				assert update.get(3)!=null;
+				newTask.setTaskName(update.get(3));
+				msg = "Task \""+target+"\" updated to \""+task.getName()+"\"";
+
+			} else if (update.get(2).equals("#") || 
+				update.get(2).equalsIgnoreCase("priority")) {
+				
+				//System.out.println("update p: "+update.get(3));
+				
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new priority?");
+				}
+				
+				if (update.get(3).equals("remove") || update.get(3).equals("delete")) {
+					newTask.setPriority(null);
+					msg = "priority removed";
+					
+				}else if(!isInteger(update.get(3),10)){
+					throw new InvalidCommandException("Priority should be an integer");
+					
+				}else if(isInteger(update.get(3),10)){
+					int priority = Integer.parseInt(update.get(3));	
+					
+					if(priority>3 || priority<=0){		
+						throw new InvalidCommandException
+						("Invalid priority.Priority is valid from 1 to 3");
+					}
+					
+					newTask.setPriority(priority);
+					msg = "Task \""+target+"\" priority updated to \""+priority+"\"";
+				}
+
+			} else if (update.get(2).equalsIgnoreCase("startTime") || 
+					update.get(2).equalsIgnoreCase("st")) {
+				
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new start time?");
+				}
+				if (update.get(3) == "remove" || update.get(3)=="delete") {
+					newTask.setStartTime(null);
+					msg = "priority removed";
+				}else{
+					newTask.setStartTime(commandInfo.startingTime());
+					msg = "Task \""+target+"\" start time updated";
+				}
+				
+				
+			} else if (update.get(2).equalsIgnoreCase("endTime") || 
+					update.get(2).equalsIgnoreCase("et")) {
+				
+				if (update.get(3) == null || update.get(3).equals("")) {
+					throw new InvalidCommandException("What's the new end time?");
+				}
+				if (update.get(3) == "remove" || update.get(3)=="delete") {
+					newTask.setEndTime(null);
+					msg = "priority removed";
+				}else{
+					newTask.setEndTime(commandInfo.endingTime());
+					msg = "Task \""+target+"\" end time updated";
+				}
+				
+				
+			} else{
+				throw new InvalidCommandException("Invalid update type. You can"
+						+ "update name/priority/startTime/endTime");
+			}
+
+			mgr.update(targetIndex, newTask);
+			
+			return msg;
+			
+		}
 		
 	}
 	
@@ -738,23 +756,19 @@ import logic.command.UpdateCommand;
 import parser.CommandPackage;
 
 public class LogicClass implements LogicInterface{
-	// This array will be used to store the messages
 
-	private static ArrayList<Task> archivedList = new ArrayList<Task>();
 	private static boolean isSearchOp = false;
 	Storage storage = Storage.getInstance();
-
-	
-	Manager mgr= Manager.getInstance();
-	
+	Manager mgr;	
 	private String path = "";
-
 	static LogicClass theOne = null;
 
 	// constructor
 	private LogicClass() {
+		mgr= new Manager();
 		mgr.initialize(storage.read().get(0), 
 				storage.read().get(1));//taskList and archivedList respectively
+		
 	}
 
 	public static LogicClass getInstance() {
@@ -778,11 +792,7 @@ public class LogicClass implements LogicInterface{
 	}
 	
 	public String executeCommand(CommandPackage commandPackage) throws InvalidCommandException {
-		
-//		if(commandPackage==null){
-//			System.out.println("cp is null");
-//		}
-//		System.out.print("getCommand"+commandPackage.getCommand());
+		assert commandPackage!=null;
 		CommandType commandType = CommandType.valueOf(commandPackage.getCommand().toUpperCase());	
 		Command cmd = null;
 
@@ -792,14 +802,15 @@ public class LogicClass implements LogicInterface{
 			cmd = new AddCommand(commandType,mgr,commandPackage);	
 			break;
 		case UPDATE:
-			
-			    cmd = new UpdateCommand(commandType,mgr,commandPackage);
-			
+			cmd = new UpdateCommand(commandType,mgr,commandPackage);
 			break;
 		case DELETE:
+			
 			if(isSearchOp==false){
+				
 				cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase(),false);
 			}else{
+				
 				cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase(),true);
 			}
 			
@@ -834,7 +845,6 @@ public class LogicClass implements LogicInterface{
 		}
 		
 		String returnMsg= cmd.execute();
-		
 		return returnMsg;
 		
 	}
@@ -855,46 +865,6 @@ public class LogicClass implements LogicInterface{
 	public void setIsSearchOp(boolean tof){
 		isSearchOp=tof;
 	}
-
-	//@author A0133949U
-//	public static boolean isTodayTask(Task t) {
-//		if (t.getEndTime() == null && t.getStartTime() == null) {
-//			return false;
-//		}
-//
-//		DateTime now = new DateTime();
-//		LocalDate today = now.toLocalDate();
-//		LocalDate tomorrow = today.plusDays(1);
-//
-//		DateTime startOfToday = today.toDateTimeAtStartOfDay(now.getZone());
-//		DateTime startOfTomorrow = tomorrow.toDateTimeAtStartOfDay(now.getZone());
-//
-//		if (t.getEndTime() == null && t.getStartTime() == null) {
-//			return false;
-//		}
-//
-//		if (t.getEndTime() != null) {
-//			if (t.getEndTime().isBefore(startOfToday)) {
-//				return false;
-//			}
-//		}
-//
-//		if (t.getStartTime() != null) {
-//			if (t.getEndTime().isBefore(startOfToday)) {
-//				return false;
-//			}
-//		}
-//
-//		if (t.getStartTime() != null && t.getEndTime() != null && t.getStartTime().isAfter(startOfToday)
-//				&& t.getEndTime().isBefore(startOfTomorrow)) {
-//			return true;
-//		}
-//		return false;
-//	}
-
-
-
-
 }
 ```
 ###### src\logic\LogicInterface.java
@@ -936,12 +906,6 @@ public class Manager {
     	undoRedo = UndoRedoOp.getInstance();
     }
     
-    public static Manager getInstance(){
-		if(manager == null){
-			manager = new Manager();
-		}
-		return manager;
-	}
   
     
     public void initialize( ArrayList<Task> tl,  ArrayList<Task> al){
@@ -985,17 +949,26 @@ public class Manager {
 
 	}
     
-    public Task delete(int taskIndex,int searchIndex,boolean inSearchStatus) { 
-    	if(inSearchStatus){
-    		searchTaskList.remove(searchIndex);
+    public Task delete(int taskIndex,int searchIndex,boolean inSearchStatus) {
+    	Task t=null;
+    	if(inSearchStatus || taskIndex == -1){
+    		t = searchTaskList.remove(searchIndex);
     	}
-    	Task t = taskList.remove(taskIndex);    	
-    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-    			new ArrayList<Task>(archivedList));
-		ptl.deleteFromPL(t);;
-		timeline.deleteFromTL(t);
-		storage.write(taskList,archivedList);
-		return t;
+    	
+    	if(taskIndex == -1){ //meaning in view-archived mode
+    		t = archivedList.remove(searchIndex);
+    		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+        			new ArrayList<Task>(archivedList));
+    		
+    	}else{ //taskIndex != -1
+    		t = taskList.remove(taskIndex);    	
+        	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+        			new ArrayList<Task>(archivedList));
+    		ptl.deleteFromPL(t);;
+    		timeline.deleteFromTL(t);
+    	}
+    	storage.write(taskList,archivedList);
+    	return t;
 
 	}
     
@@ -1039,10 +1012,11 @@ public class Manager {
 	}
     
     public void search(Task task){
-    	System.out.println("name"+task.getName());
+
     	if(task.getName().equals("done")){
     		searchTaskList = new ArrayList<Task>(archivedList);
     	}else{
+    		
     		searchTaskList = new ArrayList<Task>(seacher.search(task));
     	}
     	
@@ -1050,12 +1024,8 @@ public class Manager {
     }
     
     public boolean redo(){
-    	if(undoRedo.redo() == null){
-    		return false;
-    	}
-    	assert undoRedo.redo()!=null;
-    	
     	ArrayList<ArrayList<Task>> lists = undoRedo.redo();
+    	assert(lists != null);
     	taskList = lists.get(0);
     	archivedList = lists.get(1);
     	
@@ -1072,12 +1042,9 @@ public class Manager {
     }
     
     public boolean undo(){
-    	if(undoRedo.undo()==null){
-    		return false;
-    	}
-    	assert undoRedo.undo()!=null;
-    	
-    	ArrayList<ArrayList<Task>> lists = undoRedo.redo();
+    	ArrayList<ArrayList<Task>> lists = undoRedo.undo();
+    	assert(lists != null);
+
     	taskList = new ArrayList<Task>(lists.get(0));
     	archivedList = new ArrayList<Task>(lists.get(1));
     	
@@ -1124,6 +1091,12 @@ public class Manager {
 			timeline.addToTL(task);
 		}
     	storage.write(taskList,archivedList);
+    	
+    }
+    
+    // for testing only
+    public void addToSearchList(Task task){
+    	searchTaskList.add(task);
     	
     }
     
