--- a/collated/A0122061B.md
+++ b/collated/A0122061B.md
@@ -127,10 +127,11 @@ public class CommandParser {
     public CommandPackage inputData;
     public String input;
 
-    private ActionLibrary libraryForAction = new ActionLibrary();
-    private DateParser parserForDate = new DateParser();
-    private TimeLibrary libraryForTime = new TimeLibrary();
-    private TimeParser parserForTime = new TimeParser();
+    private ActionLibrary libraryForAction;
+    private DateParser parserForDate;
+    private TimeLibrary libraryForTime;
+    private TimeParser parserForTime;
+    private BooleanChecker checker;
 
     /*
      * ====================================================================
@@ -138,13 +139,11 @@ public class CommandParser {
      * ====================================================================
      */
 
-    public String NOT_FOUND = "invalid input";
-    public String INVALID_PACKAGE = "invalid package";
-
-    private String START_TIME_LONG = "`startTime";
-    private String START_TIME_SHORT = "`st";
-    private String END_TIME_LONG = "`endTime";
-    private String END_TIME_SHORT = "`et";
+    private final String NOT_FOUND = "invalid input";
+    private final String START_TIME_LONG = "`startTime";
+    private final String START_TIME_SHORT = "`st";
+    private final String END_TIME_LONG = "`endTime";
+    private final String END_TIME_SHORT = "`et";
 
     /*
      * ====================================================================
@@ -153,6 +152,11 @@ public class CommandParser {
      */
 
     private CommandParser() {
+	libraryForAction = ActionLibrary.getInstance();
+	libraryForTime = TimeLibrary.getInstance();
+	parserForTime = TimeParser.getInstance();
+	checker = BooleanChecker.getInstance();
+	parserForDate = DateParser.getInstance();
 
     }
 
@@ -186,48 +190,52 @@ public class CommandParser {
      */
     public CommandPackage getCommandPackage(String command) {
 	input = command;
-	try {
+	 // try {
 	    inputData = new CommandPackage();
 	    String[] arr = input.split(" ");
 	    arrToArrayList(arr);
 	    String commandName = findAction();
 
 	    inputData.setCommand(commandName);
-	    //System.out.println("name " + commandName);
-	    if (!isValidCommand(commandName) && isArrayEmptyAndInvalid()) {
+	    System.out.println("name " + commandName);
+	    System.out.println((!checker.isValidCommand(commandName)));
+	    System.out.println();
+	    if (!checker.isValidCommand(commandName)) {
 		return null;
-	    } else if (isOneCommandFormat(commandName)) {
+	    } else if (checker.isOneCommandFormat(commandName)
+		       || checker.isClearAllCommand(commandName, inputArr)) {
 		return inputData;
-	    }
-	    if (isArrayEmptyAndInvalid()) {
+	    } else if (checker.isArrayEmptyAndInvalid(inputArr)) {
 		return null;
-	    }
-	    if (isUpdateCommand(commandName)) {
+	    } else if (checker.isUpdateCommand(commandName)) {
 		return updateInput();
 	    } else {
 		String priority = findPriority();
 		inputData.setPriority(priority);
 	    }
-	    if (isCreateCommand(commandName)) {
+	    if (checker.isCreateCommand(commandName)) {
 		addDateTime();
-		if (isArrayEmptyAndInvalid()) {
+		if (checker.isArrayEmptyAndInvalid(inputArr)) {
 		    return null;
 		}
 	    }
-	    if (isSearchCommand(commandName)) {
+	    if (checker.isSearchCommand(commandName)) {
 		searchInput();
 	    }
 	    inputData.setPhrase(getPhrase());
 	    return inputData;
-	    /*-
-	    } catch (NullPointerException e1) {
+/*-
+	} catch (NullPointerException e1) {
 	    System.out.println("NULL POINTER ERRORS");
 	    return null;
-	    */
+
 	} catch (StringIndexOutOfBoundsException e2) {
 	    System.out.println("StringIndexOutOfBoundsException");
 	    return null;
+	    
 	}
+	*/
+	    
     }
     /*
      * ====================================================================
@@ -235,48 +243,58 @@ public class CommandParser {
      * ====================================================================
      */
 
-    private void addDateTime() {
+    /**
+     * The main method processes input with only 1 date input and 0 time input
+     * and input into the CommandPackage
+     * 
+     * @param dateArr
+     *            an array of existing date format
+     * @param i
+     *            the index that is going to process the dateArr element
+     * @return the updated inputArr
+     */
+    private DatePackage addDateTime() {
 	int numberOfDates = countDate();
 	int numberOfTime = countTime();
 	ArrayList<DateTime> dateArr;
-	if (isOne(numberOfDates)) {
+	if (checker.isOne(numberOfDates)) {
 	    dateArr = extractDate();
-	    if (isZero(numberOfTime)) {
+	    if (checker.isZero(numberOfTime)) {
 		for (int i = 0; i < inputArr.size(); i++) {
 		    dateProcess1(dateArr, i);
 		}
-	    } else if (isOne(numberOfTime)) {
+	    } else if (checker.isOne(numberOfTime)) {
 		dateArr = extractTime(dateArr);
 		for (int i = 0; i < inputArr.size(); i++) {
 		    dateProcess2(dateArr, i);
 		}
-	    } else if (isTwo(numberOfTime)) {
+	    } else if (checker.isTwo(numberOfTime)) {
 		dateArr.add(dateArr.get(0));
 		dateArr = extractTime(dateArr);
 		inputData.setDates(dateArr);
 	    }
 
 	} else {
-	    if (isOne(numberOfTime)) {
+	    if (checker.isOne(numberOfTime)) {
 		dateArr = extractTime();
 		for (int i = 0; i < inputArr.size(); i++) {
 		    dateProcess2(dateArr, i);
 		}
 	    }
-	    if (isTwo(numberOfDates)) {
-		dateArr = extractDate();
-		if (isTwo(numberOfTime)) {
+	    if (checker.isTwo(numberOfDates)) {
+		dateArr = extractTwoDate();
+		if (checker.isTwo(numberOfTime)) {
 		    dateArr = extractTime(dateArr);
 		}
 		inputData.setDates(dateArr);
-	    } else if (isTwo(numberOfTime)) {
+	    } else if (checker.isTwo(numberOfTime)) {
 		ArrayList<DateTime> timeArr = extractTime();
 		inputData.setDates(timeArr);
 
 	    }
 
 	}
-
+	return inputData.getDate();
     }
 
     /**
@@ -290,10 +308,10 @@ public class CommandParser {
      * @return the updated inputArr
      */
     private ArrayList<String> dateProcess1(ArrayList<DateTime> dateArr, int i) {
-	if (inputArr.get(i).equalsIgnoreCase("start")) {
+	if (libraryForTime.isStart(inputArr.get(i))) {
 	    inputData.setDates(dateArr, "start");
 	    inputArr.remove(i);
-	} else if (inputArr.get(i).equalsIgnoreCase("end")) {
+	} else if (libraryForTime.isEnd(inputArr.get(i))) {
 	    inputData.setDates(dateArr, "end");
 	    inputArr.remove(i);
 	} else {
@@ -336,7 +354,11 @@ public class CommandParser {
 	    }
 	    if (parserForDate.isDate(test)) {
 		String date = test;
+
 		index.add(i);
+		if (i < inputArr.size() - 1) {
+
+		}
 		dateArr.add(parserForDate.setDate(date));
 	    }
 	}
@@ -345,6 +367,52 @@ public class CommandParser {
 	    inputArr.remove(indexToRemove);
 	}
 	return dateArr;
+    }
+
+    private ArrayList<DateTime> extractTwoDate() {
+	ArrayList<DateTime> dateArr = new ArrayList<DateTime>();
+	ArrayList<Integer> index = new ArrayList<Integer>();
+	String test;
+	for (int i = 0; i < inputArr.size(); i++) {
+	    test = inputArr.get(i);
+	    if (test.contains("`")) {
+		test = test.substring(1);
+	    }
+	    if (parserForDate.isDate(test)) {
+		String date = test;
+		if (i >= 0) {
+		    if ((libraryForTime.isEnd(inputArr.get(i - 1))
+			 || libraryForTime.isStart(inputArr.get(i - 1)))
+			&& !(index.contains(i - 1))) {
+			index.add(i - 1);
+			System.out.println("before " + inputArr.get(i - 1));
+		    }
+		}
+		System.out.println("date" + inputArr.get(i));
+		index.add(i);
+
+		if (i < inputArr.size() - 1) {
+		    if ((libraryForTime.isEnd(inputArr.get(i + 1))
+			 || libraryForTime.isStart(inputArr.get(i + 1)))
+			&& !(index.contains(i + 1))) {
+			index.add(i + 1);
+			System.out.println("after " + inputArr.get(i + 1));
+		    }
+		}
+
+		dateArr.add(parserForDate.setDate(date));
+	    }
+	}
+	for (
+
+	int i = index.size() - 1; 0 <= i; i--)
+
+	{
+	    int indexToRemove = index.get(i);
+	    inputArr.remove(indexToRemove);
+	}
+	return dateArr;
+
     }
 
     private ArrayList<DateTime> extractTime(ArrayList<DateTime> dateArr) {
@@ -423,10 +491,14 @@ public class CommandParser {
 	return null;
     }
 
+    /*
+     * ====================================================================
+     * Parser For Update
+     * ====================================================================
+     */
     private CommandPackage updateInput() {
 	String sequence = "";
 	String word;
-	ArrayList<DateTime> dateArr;
 	int numberOfDates = countDate();
 	int numberOfTime = countTime();
 	System.out.println(numberOfTime);
@@ -440,41 +512,10 @@ public class CommandParser {
 		    sequence = "";
 		    sequence = word.substring(1);
 		    if (word.equalsIgnoreCase(START_TIME_LONG) || word.equalsIgnoreCase(START_TIME_SHORT)) {
-			sequence = "startTime";
-			if (isOne(numberOfDates)) {
-			    dateArr = extractDate();
-			    if (isOne(numberOfTime)) {
-				dateArr = extractTime(dateArr);
-			    }
-			} else if (isOne(numberOfTime)) {
-			    System.out.println("extracing start time");
-			    dateArr = extractTime();
-			} else if (inputArr.get(i + 1).equals("`delete")) {
-			    System.out.println("deleteing");
-			    dateArr = null;
-			    inputData.addUpdateSequence("delete");
-			} else {
-			    dateArr = null;
-			}
-			inputData.setDates(dateArr, "start");
+			sequence = updateStartDateParsing(numberOfDates, numberOfTime, i);
 		    } else {
 			if (word.equalsIgnoreCase(END_TIME_LONG) || word.equalsIgnoreCase(END_TIME_SHORT)) {
-			    sequence = "endTime";
-			    if (isOne(numberOfDates)) {
-				dateArr = extractDate();
-				if (isOne(numberOfTime)) {
-				    dateArr = extractTime(dateArr);
-				}
-			    } else if (isOne(numberOfTime)) {
-				dateArr = extractTime();
-			    } else if (inputArr.get(i + 1).equals("`delete")) {
-				System.out.println("deleteing");
-				dateArr = null;
-				inputData.addUpdateSequence("delete");
-			    } else {
-				dateArr = null;
-			    }
-			    inputData.setDates(dateArr, "end");
+			    sequence = updateEndDateParsing(numberOfDates, numberOfTime, i);
 			}
 		    }
 		}
@@ -483,11 +524,57 @@ public class CommandParser {
 	    }
 	}
 	inputData.addUpdateSequence(sequence);
-	if (isDateUpdateSequence()) {
+	if (checker.isDateUpdateSequence(inputData)) {
 	    inputData.addUpdateSequence(inputData.getDate().toString());
 	}
-	System.out.println("UPDATE" + inputData.getUpdateSequence().get(2));
 	return inputData;
+    }
+
+    private String updateEndDateParsing(int numberOfDates, int numberOfTime, int i) {
+	String sequence;
+	ArrayList<DateTime> dateArr;
+	sequence = "endTime";
+	if (checker.isOne(numberOfDates)) {
+	    dateArr = extractDate();
+	    if (checker.isOne(numberOfTime)) {
+		dateArr = extractTime(dateArr);
+	    }
+	} else if (checker.isOne(numberOfTime)) {
+	    dateArr = extractTime();
+	} else if (inputArr.get(i + 1).equals("`delete") || inputArr.get(i + 1).equals("`remove")) {
+	    System.out.println("deleteing");
+	    dateArr = null;
+	    inputData.addUpdateSequence(sequence);
+	    inputData.addUpdateSequence("delete");
+	} else {
+	    dateArr = null;
+	}
+	inputData.setDates(dateArr, "end");
+	return sequence;
+    }
+
+    private String updateStartDateParsing(int numberOfDates, int numberOfTime, int i) {
+	String sequence;
+	ArrayList<DateTime> dateArr;
+	sequence = "startTime";
+	if (checker.isOne(numberOfDates)) {
+	    dateArr = extractDate();
+	    if (checker.isOne(numberOfTime)) {
+		dateArr = extractTime(dateArr);
+	    }
+	} else if (checker.isOne(numberOfTime)) {
+	    System.out.println("extracing start time");
+	    dateArr = extractTime();
+	} else if (inputArr.get(i + 1).equals("`delete") || inputArr.get(i + 1).equals("`remove")) {
+	    System.out.println("deleteing");
+	    dateArr = null;
+	    inputData.addUpdateSequence(sequence);
+	    inputData.addUpdateSequence("delete");
+	} else {
+	    dateArr = null;
+	}
+	inputData.setDates(dateArr, "start");
+	return sequence;
     }
 
     /*
@@ -496,7 +583,7 @@ public class CommandParser {
      * ====================================================================
      */
 
-    private ArrayList<String> arrToArrayList(String[] arr) {
+    public ArrayList<String> arrToArrayList(String[] arr) {
 	inputArr = new ArrayList<String>();
 	for (int i = 0; i < arr.length; i++) {
 	    inputArr.add(arr[i]);
@@ -557,7 +644,7 @@ public class CommandParser {
     private boolean remove(String word) {
 	for (int i = 0; i < inputArr.size(); i++) {
 	    if (inputArr.get(i).equalsIgnoreCase(word)) {
-		remove(i);
+		inputArr.remove(i);
 	    }
 	}
 	return true;
@@ -568,52 +655,6 @@ public class CommandParser {
      * Boolean operations
      * ====================================================================
      */
-
-    private boolean isValidCommand(String command) {
-	return command != NOT_FOUND;
-    }
-
-    private boolean isSearchCommand(String commandName) {
-	return commandName.equals("search");
-    }
-
-    private boolean isUpdateCommand(String commandName) {
-	return commandName.equals("update");
-    }
-
-    private boolean isCreateCommand(String commandName) {
-	return commandName.equals("create");
-    }
-
-    private boolean isArrayEmptyAndInvalid() {
-	return inputArr.size() == 0;
-    }
-
-    protected boolean remove(int index) {
-	inputArr.remove(index);
-	return true;
-    }
-
-    private boolean isDateUpdateSequence() {
-	return inputData.getUpdateSequence().size() < 4;
-    }
-
-    private boolean isZero(int numberOfTime) {
-	return numberOfTime == 0;
-    }
-
-    private boolean isTwo(int numberOfDates) {
-	return numberOfDates == 2;
-    }
-
-    private boolean isOne(int numberOfTime) {
-	return numberOfTime == 1;
-    }
-
-    private boolean isOneCommandFormat(String commandName) {
-	return commandName.equalsIgnoreCase("undo") || commandName.equalsIgnoreCase("clear")
-	       || commandName.equalsIgnoreCase("exit") || commandName.equalsIgnoreCase("redo");
-    }
 
     /*
      * ====================================================================
@@ -634,8 +675,10 @@ public class CommandParser {
 
     }
 
-    private String callAction(String string) {
-	String result = libraryForAction.find(string);
+    public String callAction(String string) {
+	String result;
+	System.out.println("string");
+	result = libraryForAction.find(string);
 	return result;
     }
 
@@ -653,17 +696,27 @@ public class CommandParserDemo {
 	public static void main(String[] args) throws Exception {
 		CommandParser cmd = CommandParser.getInstance();
 		CommandPackage CPK;
-		System.out.println(cmd.getCommandPackage("").endingTime());
-		CPK = cmd.getCommandPackage("undo");
-		//System.out.println("Starting time " + CPK.getUpdateSequence().get(2));
-		System.out.println();
-		System.out.println(cmd.getCommandPackage("").getPhrase().equals(""));
+		
+		BooleanChecker asd = BooleanChecker.getInstance();
+		System.out.println(asd.isOne(0));
+		//System.out.println(cmd.getCommandPackage("").endingTime());
+		CPK = cmd.getCommandPackage("add something");
+		CommandParser cmdP = CommandParser.getInstance();
+		CommandPackage cPK1 = cmdP.getCommandPackage("search meeting 10-oct #1");
+		System.out.println(cPK1.startingTime());
+		System.out.println("+++++++");
+		boolean test1 = cPK1.getCommand().equals("create");
+		System.out.println("test is = " + test1);
+		System.out.println(cmd.getCommandPackage("") == null);
 		CPK = cmd.getCommandPackage("plus something 10-oct");
 		String test = "11/22";
 		String test2 = "/33";
 		String test3 = "44/";
 		String[] test4 = test3.split("/");
 		System.out.println(test4.length);
+		
+
+
 		//System.out.println(test.contains("as"));
 	}
 }
@@ -687,6 +740,8 @@ public class DateParser {
      * Magic Constants
      * ====================================================================
      */
+    
+    private static DateParser theOne = null;
     // format -1 : invalid format
     private final int INVALID_FORMAT_TYPE = -1;
 
@@ -736,7 +791,7 @@ public class DateParser {
     private final int FORMAT_TYPE_2_INDEX = 12;
     private final int FORMAT_TYPE_3_INDEX = 20;
 
-    private ArrayList<DateTimeFormatter> dateFormats =
+    private final ArrayList<DateTimeFormatter> dateFormats =
 	    new ArrayList<DateTimeFormatter>(Arrays.asList(DateTimeFormat.forPattern(DATE_FORMAT_0),
 							   DateTimeFormat.forPattern(DATE_FORMAT_1),
 							   DateTimeFormat.forPattern(DATE_FORMAT_2),
@@ -758,7 +813,23 @@ public class DateParser {
 							   DateTimeFormat.forPattern(DATE_FORMAT_17),
 							   DateTimeFormat.forPattern(DATE_FORMAT_18),
 							   DateTimeFormat.forPattern(DATE_FORMAT_19)));
+    /*
+     * ====================================================================
+     * Constructors
+     * ====================================================================
+     */
+    
+    private DateParser() {
+    }
+    public static DateParser getInstance() {
 
+	if (theOne == null) {
+	    theOne = new DateParser();
+	}
+	return theOne;
+    }
+
+  
     /*
      * ====================================================================
      * Methods to execute DateParser
@@ -1050,13 +1121,31 @@ public class TimeParser {
 							   DateTimeFormat.forPattern(TIME_FORMAT_7),
 							   DateTimeFormat.forPattern(TIME_FORMAT_8),
 							   DateTimeFormat.forPattern(TIME_FORMAT_9)));
+    private static TimeParser theOne = null;
+
+    /*
+     * ====================================================================
+     * Constructors
+     * ====================================================================
+     */
+
+    private TimeParser() {
+
+    }
+
+    protected static TimeParser getInstance() {
+
+	if (theOne == null) {
+	    theOne = new TimeParser();
+	}
+	return theOne;
+    }
     /*
      * ====================================================================
      * Execute methods for TimeParser
      * ====================================================================
      */
-    
-    
+
     /**
      * Sets the hours and minutes of an existing date
      *
