--- a/collated/A0133949U.md
+++ b/collated/A0133949U.md
@@ -116,7 +116,7 @@ public class DeleteCommand extends Command{
 	@Override
 	public String execute() throws InvalidCommandException{
 		
-		if(inSearchStatus==false){
+		if(inSearchStatus==false){ 
 			int index=0;
 			int searchIndex=-1;
 			boolean found = false;
@@ -562,7 +562,7 @@ public class UpdateCommand extends Command{
 		
 		ArrayList<String> update = commandInfo.getUpdateSequence();
 		String target = update.get(1);
-		Task task;
+		Task task=null;
 		Task newTask;
 		boolean found=false;
 		String msg="";
@@ -572,10 +572,12 @@ public class UpdateCommand extends Command{
 		
 		if(isInteger(target,10)==true){
 			targetIndex = Integer.parseInt(target)-1;
+			
 		}
 		
 		if(targetIndex<taskList.size() &&  targetIndex>=0 ){
 			found=true;
+			task = taskList.get(targetIndex);
 		}else{ 
 			for (int i = 0; i < taskList.size(); i++) {
 				task = taskList.get(i);
@@ -587,7 +589,7 @@ public class UpdateCommand extends Command{
 			}
 		}
 		
-		task = taskList.get(targetIndex);
+		
 		
 		if(found == false){
 			
@@ -603,7 +605,7 @@ public class UpdateCommand extends Command{
 				}
 				assert update.get(3)!=null;
 				newTask.setTaskName(update.get(3));
-				msg = "Task \""+target+"\" updated to \""+task.getName()+"\"";
+				msg = "Task \""+target+"\" updated to \""+ newTask.getName()+"\"";
 
 			} else if (update.get(2).equals("#") || 
 				update.get(2).equalsIgnoreCase("priority")) {
@@ -755,20 +757,21 @@ import logic.command.UndoCommand;
 import logic.command.UpdateCommand;
 import parser.CommandPackage;
 
-public class LogicClass implements LogicInterface{
+public class LogicClass implements LogicInterface {
 
 	private static boolean isSearchOp = false;
 	Storage storage = Storage.getInstance();
-	Manager mgr;	
-	private String path = "";
+	Manager mgr;
 	static LogicClass theOne = null;
 
 	// constructor
 	private LogicClass() {
-		mgr= new Manager();
-		mgr.initialize(storage.read().get(0), 
-				storage.read().get(1));//taskList and archivedList respectively
-		
+		mgr = new Manager();
+		mgr.initialize(storage.read().get(0), storage.read().get(1));// taskList
+																		// and
+																		// archivedList
+																		// respectively
+
 	}
 
 	public static LogicClass getInstance() {
@@ -779,63 +782,63 @@ public class LogicClass implements LogicInterface{
 		return theOne;
 	}
 
-	public ArrayList<Task> getTaskList(){
-		
-		if(isSearchOp==true){
+	public ArrayList<Task> getTaskList() {
+
+		if (isSearchOp == true) {
 			return mgr.getSearchList();
-		}	
+		}
 		return mgr.getTaskList();
 	}
-	
-	public ArrayList<Task> getTaskListForSearcher(){	
+
+	public ArrayList<Task> getTaskListForSearcher() {
 		return mgr.getTaskList();
 	}
-	
+
 	public String executeCommand(CommandPackage commandPackage) throws InvalidCommandException {
-		assert commandPackage!=null;
-		CommandType commandType = CommandType.valueOf(commandPackage.getCommand().toUpperCase());	
+		assert commandPackage != null;
+		CommandType commandType = CommandType.valueOf(commandPackage.getCommand().toUpperCase());
 		Command cmd = null;
 
 		switch (commandType) {
 		case CREATE:
-			isSearchOp=false;
-			cmd = new AddCommand(commandType,mgr,commandPackage);	
+			isSearchOp = false;
+			cmd = new AddCommand(commandType, mgr, commandPackage);
 			break;
 		case UPDATE:
-			cmd = new UpdateCommand(commandType,mgr,commandPackage);
+			cmd = new UpdateCommand(commandType, mgr, commandPackage);
 			break;
 		case DELETE:
-			
-			if(isSearchOp==false){
-				
-				cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase(),false);
-			}else{
-				
-				cmd = new DeleteCommand(commandType,mgr,commandPackage.getPhrase(),true);
+
+			if (isSearchOp == false) {
+
+				cmd = new DeleteCommand(commandType, mgr, commandPackage.getPhrase(), false);
+			} else {
+
+				cmd = new DeleteCommand(commandType, mgr, commandPackage.getPhrase(), true);
 			}
-			
+
 			break;
 		case CLEAR:
-			cmd = new ClearCommand(commandType,mgr);
+			cmd = new ClearCommand(commandType, mgr);
 			break;
 		case SORT:
-			cmd = new SortCommand(commandType,mgr,commandPackage);
+			cmd = new SortCommand(commandType, mgr, commandPackage);
 			break;
 		case SEARCH:
 			isSearchOp = true;
-			cmd = new SearchCommand(commandType,mgr,commandPackage);
-			break;	
+			cmd = new SearchCommand(commandType, mgr, commandPackage);
+			break;
 		case REDO:
-			cmd = new RedoCommand(commandType,mgr);
+			cmd = new RedoCommand(commandType, mgr);
 			break;
 		case UNDO:
-			cmd = new UndoCommand(commandType,mgr);
+			cmd = new UndoCommand(commandType, mgr);
 			break;
 		case MARK:
-			cmd = new MarkCommand(commandType,mgr,commandPackage.getPhrase());
+			cmd = new MarkCommand(commandType, mgr, commandPackage.getPhrase());
 			break;
 		case SET:
-			cmd = new SetCommand(commandType,mgr,commandPackage.getPhrase());
+			cmd = new SetCommand(commandType, mgr, commandPackage.getPhrase());
 			break;
 		case EXIT:
 			System.exit(0);
@@ -843,10 +846,10 @@ public class LogicClass implements LogicInterface{
 			return invalid();
 
 		}
-		
-		String returnMsg= cmd.execute();
+
+		String returnMsg = cmd.execute();
 		return returnMsg;
-		
+
 	}
 
 	private String invalid() {
@@ -857,13 +860,8 @@ public class LogicClass implements LogicInterface{
 		return storage.setPath(path);
 	}
 
-
-	public boolean setPathFirstTime(){
-		return storage.setPath(this.path);
-	}
-	
-	public void setIsSearchOp(boolean tof){
-		isSearchOp=tof;
+	public void setIsSearchOp(boolean tof) {
+		isSearchOp = tof;
 	}
 }
 ```
@@ -912,8 +910,9 @@ public class Manager {
     	taskList = tl;
         setptlAndTimeLine(taskList);
         archivedList = al;
+       
     	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-    			new ArrayList<Task>(archivedList));
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
     	storage.write(taskList,archivedList);
     	
     }
@@ -940,7 +939,7 @@ public class Manager {
     	
 		taskList.add(0,task);
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-				new ArrayList<Task>(archivedList));
+				new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		ptl.addToPL(task);
 		timeline.addToTL(task);
 		storage.write(taskList,archivedList);
@@ -957,16 +956,17 @@ public class Manager {
     	
     	if(taskIndex == -1){ //meaning in view-archived mode
     		t = archivedList.remove(searchIndex);
-    		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-        			new ArrayList<Task>(archivedList));
+    		
     		
     	}else{ //taskIndex != -1
     		t = taskList.remove(taskIndex);    	
-        	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-        			new ArrayList<Task>(archivedList));
+        	
     		ptl.deleteFromPL(t);;
     		timeline.deleteFromTL(t);
     	}
+    	
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
     	storage.write(taskList,archivedList);
     	return t;
 
@@ -977,7 +977,7 @@ public class Manager {
 		ptl.clear();
 		timeline.clear();
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-    			new ArrayList<Task>(archivedList));
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		storage.write(taskList,archivedList);
 
     }
@@ -1006,7 +1006,7 @@ public class Manager {
 			break;
     	}
     	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-    			new ArrayList<Task>(archivedList));
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		storage.write(taskList,archivedList);
 
 	}
@@ -1020,14 +1020,21 @@ public class Manager {
     		searchTaskList = new ArrayList<Task>(seacher.search(task));
     	}
     	
+    	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
+    	
   	
     }
     
     public boolean redo(){
     	ArrayList<ArrayList<Task>> lists = undoRedo.redo();
+    	if(lists==null){
+    		return false;
+    	}
     	assert(lists != null);
     	taskList = lists.get(0);
     	archivedList = lists.get(1);
+    	searchTaskList = lists.get(2);
     	
 		ptl.clear();
 		timeline.clear();
@@ -1043,10 +1050,14 @@ public class Manager {
     
     public boolean undo(){
     	ArrayList<ArrayList<Task>> lists = undoRedo.undo();
+    	if(lists==null){
+    		return false;
+    	}
     	assert(lists != null);
 
     	taskList = new ArrayList<Task>(lists.get(0));
     	archivedList = new ArrayList<Task>(lists.get(1));
+    	searchTaskList = lists.get(2);
     	
 		ptl.clear();
 		timeline.clear();
@@ -1068,7 +1079,7 @@ public class Manager {
     	archivedList.add(t);
     	System.out.println("al"+archivedList.toString());
     	undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-    			new ArrayList<Task>(archivedList));
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		ptl.deleteFromPL(t);;
 		timeline.deleteFromTL(t);
 		storage.write(taskList,archivedList);
@@ -1080,7 +1091,7 @@ public class Manager {
     	taskList.remove(index);
 		taskList.add(index,newTask);
 		undoRedo.addStateToUndo(new ArrayList<Task>(taskList),
-    			new ArrayList<Task>(archivedList));
+    			new ArrayList<Task>(archivedList),new ArrayList<Task>(searchTaskList));
 		storage.write(taskList,archivedList);
     }
     
