--- a/collated/A0133948W.md
+++ b/collated/A0133948W.md
@@ -248,357 +248,6 @@ public class Searcher {
 	}
 }
 ```
-###### src\logic\SystemTest.java
-``` java
-public class SystemTest {
-	LogicClass lc = LogicClass.getInstance();
-	
-	@Test
-	public void test1() throws InvalidCommandException {
-		//test: clear, add, update, delete
-		CommandParser cmp = CommandParser.getInstance();
-		CommandPackage cmd = cmp.getCommandPackage("clear");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting2 1am");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting6");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting7 tomorrow");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting8 Sunday");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting9 #1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting10 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("create meeting11 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("`a meeting12 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting13 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting14 30/11/2015 #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting15 30.11.2015 #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add \"meeting16 tomorrow\"");
-		lc.executeCommand(cmd);
-		assertEquals(16,lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("update `meeting1 `name `party1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("update `meeting2 `# `2");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("update `meeting3 `priority `3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("update `meeting4 `starttime `9pm");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("update `meeting5 `endtime `10pm");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("edit `meeting6 `name `party6");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("`e `meeting7 `starttime `9.10.2016");
-		lc.executeCommand(cmd);
-		assertEquals(16, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("delete party1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("delete 1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("delete meeting2");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("bomb meeting3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("remove meeting4");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("`b meeting5");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("`rmv party6");
-		lc.executeCommand(cmd);
-		assertEquals(9, lc.getTaskList().size());
-	}
-	
-	@Test
-	public void test2() throws InvalidCommandException {
-		//test: undo, redo
-		CommandParser cmp = CommandParser.getInstance();
-		CommandPackage cmd = cmp.getCommandPackage("clear");
-		lc.executeCommand(cmd);
-		int size = lc.getTaskList().size();
-		assertEquals(0, size);
-		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting2 1am");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("undo");
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		size = lc.getTaskList().size();
-		assertEquals(0, size);
-		cmd = cmp.getCommandPackage("redo");
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		lc.executeCommand(cmd);
-		size = lc.getTaskList().size();
-		assertEquals(5, size);
-		cmd = cmp.getCommandPackage("delete 1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("undo");
-		lc.executeCommand(cmd);
-		System.out.println(lc.getTaskList().toString());
-		size = lc.getTaskList().size();
-		assertEquals(5, size);
-		cmd = cmp.getCommandPackage("redo");
-		lc.executeCommand(cmd);
-		size = lc.getTaskList().size();
-		assertEquals(4, size);
-		cmd = cmp.getCommandPackage("update `meeting4 `name `party4");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("undo");
-		lc.executeCommand(cmd);
-		assertEquals("meeting4", lc.getTaskList().get(0).getName());
-		cmd = cmp.getCommandPackage("update `meeting4 `# `1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("undo");
-		lc.executeCommand(cmd);
-		assertEquals(new Integer(3), lc.getTaskList().get(0).getPriority());
-		cmd = cmp.getCommandPackage("update `meeting4 `starttime `8-Dec");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("undo");
-		lc.executeCommand(cmd);
-		assertEquals(0, lc.getTaskList().get(0).getStartTime().compareTo(new DateTime(2015,12,9,0,0)));
-	}
-	
-	@Test
-	public void test3() throws InvalidCommandException {
-		//test: sort, search
-		CommandParser cmp = CommandParser.getInstance();
-		CommandPackage cmd = cmp.getCommandPackage("clear");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting2 1am");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting6");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting7 tomorrow");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting8 Sunday");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting9 #1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting10 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("create meeting11 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("`a meeting12 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting13 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting14 30/11/2015 #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting15 30.11.2015 #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add \"meeting16 tomorrow\"");
-		lc.executeCommand(cmd);
-		assertEquals(16,lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("sort name");
-		lc.executeCommand(cmd);
-		assertEquals("meeting1", lc.getTaskList().get(1).getName());
-		cmd = cmp.getCommandPackage("sort time");
-		lc.executeCommand(cmd);
-		assertEquals("meeting3", lc.getTaskList().get(0).getName());
-		cmd = cmp.getCommandPackage("sort priority");
-		lc.executeCommand(cmd);
-		assertEquals("meeting9", lc.getTaskList().get(0).getName());
-		cmd = cmp.getCommandPackage("search meeting");
-		lc.executeCommand(cmd);
-		assertEquals(16, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("find meeting11");
-		lc.executeCommand(cmd);
-		assertEquals(1, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("`s meeting2");
-		lc.executeCommand(cmd);
-		assertEquals(1, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search #2");
-		lc.executeCommand(cmd);
-		assertEquals(0, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search #3");
-		lc.executeCommand(cmd);
-		assertEquals(6, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search 9-Dec");
-		lc.executeCommand(cmd);
-		assertEquals(1, lc.getTaskList().size());
-	}
-
-	@Test
-	public void test4() throws InvalidCommandException {
-		//test: mark, search done
-		CommandParser cmp = CommandParser.getInstance();
-		CommandPackage cmd = cmp.getCommandPackage("clear");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting2 1am");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting6");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting7 tomorrow");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting8 Sunday");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting9 #1");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting10 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("create meeting11 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("`a meeting12 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting13 10pm #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting14 30/11/2015 #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add meeting15 30.11.2015 #3");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("add \"meeting16 tomorrow\"");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("mark meeting1");
-		lc.executeCommand(cmd);
-		assertEquals(15, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search done");
-		lc.executeCommand(cmd);
-		assertEquals(1, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("undo");
-		lc.executeCommand(cmd);
-		assertEquals(16, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search done");
-		lc.executeCommand(cmd);
-		assertEquals(0, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("redo");
-		lc.executeCommand(cmd);
-		assertEquals(15, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search done");
-		lc.executeCommand(cmd);
-		assertEquals(1, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("complete meeting2");
-		lc.executeCommand(cmd);
-		cmd = cmp.getCommandPackage("finish meeting3");
-		lc.executeCommand(cmd);
-		assertEquals(13, lc.getTaskList().size());
-		cmd = cmp.getCommandPackage("search done");
-		lc.executeCommand(cmd);
-		assertEquals(3, lc.getTaskList().size());
-	}
-	
-	@Test
-	public void test5(){
-		//test: invalid command
-		CommandParser cmp = CommandParser.getInstance();
-		CommandPackage cmd = cmp.getCommandPackage("clear");
-		try {
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("add meeting #4");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("add meeting #-1");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("add meeting1 9-Oct");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("delete party");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("delete 2");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("update `party `name `meeting");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("update `2 `name `meeting");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("update `meeting1 `starttime `what");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("update `meeting1 `# `4");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("mark party");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("search 9-Nov 9pm");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("search #4");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		try {
-			cmd = cmp.getCommandPackage("sort abc");
-			lc.executeCommand(cmd);
-		} catch (InvalidCommandException e) {
-		}
-		assertEquals(1, lc.getTaskList().size());
-		
-	}
-}
-```
 ###### src\logic\TimeLine.java
 ``` java
 public class TimeLine {
@@ -786,161 +435,6 @@ public class TimeLine {
     
 }
 ```
-###### src\logic\TimeSearchTest.java
-``` java
-public class TimeSearchTest {
-
-	@Test
-	public void test1() {
-		//test: event task 
-		Task a = new Task("A");
-		a.setStartTime(new DateTime(2014, 1, 1, 1, 1));
-		a.setEndTime(new DateTime(2014, 1, 2, 1, 1));
-		Task b = new Task("B");
-		b.setStartTime(new DateTime(2014, 2, 1, 1, 1));
-		b.setEndTime(new DateTime(2014, 2, 2, 1, 1));
-		TimeLine.getInstance().clear();
-		TimeLine.getInstance().addToTL(a);
-		TimeLine.getInstance().addToTL(b);
-		assertEquals("A",Searcher.getInstance().searchDate(new DateTime(2014,1,1,1,1), new DateTime(2014,1,1,2,1)).get(0).getName());
-	}
-
-	@Test
-	public void test2() {
-		//test: deadline Task in range
-		Task c = new Task("C");
-		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
-		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
-		Task d = new Task("D");
-		d.setEndTime(new DateTime(2014, 1, 3, 1, 1));
-		TimeLine.getInstance().clear();
-		TimeLine.getInstance().addToTL(c);
-		TimeLine.getInstance().addToTL(d);
-		assertEquals("D",Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,2,1)).get(0).getName());
-	}
-	
-	public void test3() {
-		//test: deadline Task out of range
-		Task c = new Task("C");
-		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
-		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
-		Task d = new Task("D");
-		d.setEndTime(new DateTime(2014, 2, 3, 1, 1));
-		TimeLine.getInstance().clear();
-		TimeLine.getInstance().addToTL(c);
-		TimeLine.getInstance().addToTL(d);
-		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,1,2)).size());
-	}
-
-	@Test
-	public void test4() {
-		//test: task with only start time which is before the start time being search.
-		Task e = new Task("E");
-		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
-		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
-		Task f = new Task("F");
-		f.setStartTime(new DateTime(2014, 1, 1, 1, 1));
-		TimeLine.getInstance().clear();
-		TimeLine.getInstance().addToTL(e);
-		TimeLine.getInstance().addToTL(f);
-		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
-	}
-
-	@Test
-	public void test5() {
-		//test: task with only start time which is after the start time being search.
-		Task e = new Task("E");
-		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
-		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
-		Task f = new Task("F");
-		f.setStartTime(new DateTime(2014, 2, 2, 1, 1));
-		TimeLine.getInstance().clear();
-		TimeLine.getInstance().addToTL(e);
-		TimeLine.getInstance().addToTL(f);
-		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
-	}
-	
-	@Test
-	public void test6() {
-		//test: task with only start time which is after the end time being search.
-		Task e = new Task("E");
-		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
-		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
-		Task f = new Task("F");
-		f.setStartTime(new DateTime(2014, 3, 2, 1, 1));
-		TimeLine.getInstance().clear();
-		TimeLine.getInstance().addToTL(e);
-		TimeLine.getInstance().addToTL(f);
-		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
-	}
-	
-	@Test
-	public void test7() {
-		//test: floating task
-		Task g = new Task("G");
-		g.setStartTime(new DateTime(2014, 1, 3, 1, 1));
-		g.setEndTime(new DateTime(2014, 1, 4, 1, 1));
-		Task h = new Task("H");
-		TimeLine.getInstance().clear();
-		TimeLine.getInstance().addToTL(g);
-		TimeLine.getInstance().addToTL(h);
-		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
-	}
-}
-```
-###### src\storage\ReadAndWriteTest.java
-``` java
-public class ReadAndWriteTest {
-
-	@Test
-	public void test() {
-		Storage storage = Storage.getInstance();
-		ArrayList<Task> a = new ArrayList<Task>();
-		ArrayList<Task> c = new ArrayList<Task>();
-		for(int i = 1; i < 10; i++){
-			Task t1 = new Task("test" + i);
-			t1.setStartTime(new DateTime(2016,i,1,1,1));
-			t1.setEndTime(new DateTime(2016,i+1,1,1,1));
-			t1.setPriority(1);
-			a.add(t1);
-		}
-		storage.read();
-		storage.write(a,c);
-		ArrayList<Task> b = storage.read().get(0);
-		System.out.println(a);
-		System.out.println(b);
-		for(int i = 0; i < 9; i++){
-			assertEquals(a.get(i).getName(), b.get(i).getName());
-			assertEquals(a.get(i).getStartTime(), b.get(i).getStartTime());
-			assertEquals(a.get(i).getEndTime(), b.get(i).getEndTime());
-			assertEquals(a.get(i).getPriority(), b.get(i).getPriority());
-		}
-	}
-
-}
-```
-###### src\storage\SetPathTest.java
-``` java
-public class SetPathTest {
-
-	@Test
-	public void test() {
-		
-		ArrayList<Task> a = new ArrayList<Task>();
-		ArrayList<Task> c = new ArrayList<Task>();
-		Task t = new Task("test");
-		a.add(t);
-		Storage.getInstance().write(a,c);
-		Storage.getInstance().setPath("Task_Bomber.txt");
-		ArrayList<Task> b = Storage.getInstance().read().get(0);
-		System.out.println(a);
-		System.out.println(b);
-		assertEquals(b.get(0).getName(), a.get(0).getName());
-		
-	}
-
-}
-```
 ###### src\storage\Storage.java
 ``` java
 public class Storage {
@@ -1121,6 +615,498 @@ public class Storage {
 			System.out.println("invalid path");
 			return false;
 		}
+	}
+}
+```
+###### src\test\ReadAndWriteTest.java
+``` java
+public class ReadAndWriteTest {
+
+	@Test
+	public void test() {
+		Storage storage = Storage.getInstance();
+		ArrayList<Task> a = new ArrayList<Task>();
+		ArrayList<Task> c = new ArrayList<Task>();
+		for(int i = 1; i < 10; i++){
+			Task t1 = new Task("test" + i);
+			t1.setStartTime(new DateTime(2016,i,1,1,1));
+			t1.setEndTime(new DateTime(2016,i+1,1,1,1));
+			t1.setPriority(1);
+			a.add(t1);
+		}
+		storage.read();
+		storage.write(a,c);
+		ArrayList<Task> b = storage.read().get(0);
+		System.out.println(a);
+		System.out.println(b);
+		for(int i = 0; i < 9; i++){
+			assertEquals(a.get(i).getName(), b.get(i).getName());
+			assertEquals(a.get(i).getStartTime(), b.get(i).getStartTime());
+			assertEquals(a.get(i).getEndTime(), b.get(i).getEndTime());
+			assertEquals(a.get(i).getPriority(), b.get(i).getPriority());
+		}
+	}
+
+}
+```
+###### src\test\SetPathTest.java
+``` java
+public class SetPathTest {
+
+	@Test
+	public void test() {
+		
+		ArrayList<Task> a = new ArrayList<Task>();
+		ArrayList<Task> c = new ArrayList<Task>();
+		Task t = new Task("test");
+		a.add(t);
+		Storage.getInstance().write(a,c);
+		Storage.getInstance().setPath("Task_Bomber.txt");
+		ArrayList<Task> b = Storage.getInstance().read().get(0);
+		System.out.println(a);
+		System.out.println(b);
+		assertEquals(b.get(0).getName(), a.get(0).getName());
+		
+	}
+
+}
+```
+###### src\test\SystemTest.java
+``` java
+public class SystemTest {
+	LogicClass lc = LogicClass.getInstance();
+	
+	@Test
+	public void test1() throws InvalidCommandException {
+		//test: clear, add, update, delete
+		CommandParser cmp = CommandParser.getInstance();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting2 1am");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting6");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting7 tomorrow");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting8 Sunday");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting9 #1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting10 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("create meeting11 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("`a meeting12 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting13 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting14 30/11/2015 #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting15 30.11.2015 #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add \"meeting16 tomorrow\"");
+		lc.executeCommand(cmd);
+		assertEquals(16,lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("update `meeting1 `name `party1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("update `meeting2 `# `2");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("update `meeting3 `priority `3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("update `meeting4 `starttime `9pm");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("update `meeting5 `endtime `10pm");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("edit `meeting6 `name `party6");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("`e `meeting7 `starttime `9.10.2016");
+		lc.executeCommand(cmd);
+		assertEquals(16, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("delete party1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("delete 1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("delete meeting2");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("bomb meeting3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("remove meeting4");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("`b meeting5");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("`rmv party6");
+		lc.executeCommand(cmd);
+		assertEquals(9, lc.getTaskList().size());
+	}
+	
+	@Test
+	public void test2() throws InvalidCommandException {
+		//test: undo, redo
+		CommandParser cmp = CommandParser.getInstance();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		lc.executeCommand(cmd);
+		int size = lc.getTaskList().size();
+		assertEquals(0, size);
+		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting2 1am");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("undo");
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		size = lc.getTaskList().size();
+		assertEquals(0, size);
+		cmd = cmp.getCommandPackage("redo");
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		lc.executeCommand(cmd);
+		size = lc.getTaskList().size();
+		assertEquals(5, size);
+		cmd = cmp.getCommandPackage("delete 1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("update `meeting4 `name `party4");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("undo");
+		lc.executeCommand(cmd);
+		assertEquals("meeting4", lc.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("update `meeting4 `# `1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("undo");
+		lc.executeCommand(cmd);
+		assertEquals(new Integer(3), lc.getTaskList().get(0).getPriority());
+		cmd = cmp.getCommandPackage("update `meeting4 `starttime `8-Dec");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("undo");
+		lc.executeCommand(cmd);
+		assertEquals(0, lc.getTaskList().get(0).getStartTime().compareTo(new DateTime(2015,12,9,0,0)));
+	}
+	
+	@Test
+	public void test3() throws InvalidCommandException {
+		//test: sort, search
+		CommandParser cmp = CommandParser.getInstance();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting2 1am");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting6");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting7 tomorrow");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting8 Sunday");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting9 #1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting10 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("create meeting11 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("`a meeting12 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting13 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting14 30/11/2015 #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting15 30.11.2015 #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add \"meeting16 tomorrow\"");
+		lc.executeCommand(cmd);
+		assertEquals(16,lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("sort name");
+		lc.executeCommand(cmd);
+		assertEquals("meeting1", lc.getTaskList().get(1).getName());
+		cmd = cmp.getCommandPackage("sort time");
+		lc.executeCommand(cmd);
+		assertEquals("meeting3", lc.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("sort priority");
+		lc.executeCommand(cmd);
+		assertEquals("meeting9", lc.getTaskList().get(0).getName());
+		cmd = cmp.getCommandPackage("search meeting");
+		lc.executeCommand(cmd);
+		assertEquals(16, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("find meeting11");
+		lc.executeCommand(cmd);
+		assertEquals(1, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("`s meeting2");
+		lc.executeCommand(cmd);
+		assertEquals(1, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("search #2");
+		lc.executeCommand(cmd);
+		assertEquals(0, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("search #3");
+		lc.executeCommand(cmd);
+		assertEquals(6, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("search 9-Dec");
+		lc.executeCommand(cmd);
+		assertEquals(1, lc.getTaskList().size());
+	}
+
+	@Test
+	public void test4() throws InvalidCommandException {
+		//test: mark, search done
+		CommandParser cmp = CommandParser.getInstance();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting1 9-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting2 1am");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting3 9pm 10pm");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting4 9-Dec 10-Dec");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting5 start 11-Oct");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting6");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting7 tomorrow");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting8 Sunday");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting9 #1");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting10 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("create meeting11 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("`a meeting12 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting13 10pm #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting14 30/11/2015 #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add meeting15 30.11.2015 #3");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("add \"meeting16 tomorrow\"");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("mark meeting1");
+		lc.executeCommand(cmd);
+		assertEquals(15, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("search done");
+		lc.executeCommand(cmd);
+		lc.setIsSearchOp(false);
+		assertEquals(15, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("search done");
+		lc.executeCommand(cmd);
+		lc.setIsSearchOp(false);
+		assertEquals(15, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("search done");
+		lc.executeCommand(cmd);
+		lc.setIsSearchOp(false);
+		cmd = cmp.getCommandPackage("complete meeting2");
+		lc.executeCommand(cmd);
+		cmd = cmp.getCommandPackage("mark meeting3");
+		lc.executeCommand(cmd);
+		assertEquals(13, lc.getTaskList().size());
+		cmd = cmp.getCommandPackage("search done");
+		lc.executeCommand(cmd);
+	}
+	
+	@Test
+	public void test5(){
+		//test: invalid command
+		CommandParser cmp = CommandParser.getInstance();
+		CommandPackage cmd = cmp.getCommandPackage("clear");
+		try {
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("add meeting #4");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("add meeting #-1");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("add meeting1 9-Oct");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("delete party");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("delete 2");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `party `name `meeting");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `2 `name `meeting");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `meeting1 `starttime `what");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("update `meeting1 `# `4");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("mark party");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("search 9-Nov 9pm");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("search #4");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		try {
+			cmd = cmp.getCommandPackage("sort abc");
+			lc.executeCommand(cmd);
+		} catch (InvalidCommandException e) {
+		}
+		
+		
+	}
+}
+```
+###### src\test\TimeSearchTest.java
+``` java
+public class TimeSearchTest {
+
+	@Test
+	public void test1() {
+		//test: event task 
+		Task a = new Task("A");
+		a.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		a.setEndTime(new DateTime(2014, 1, 2, 1, 1));
+		Task b = new Task("B");
+		b.setStartTime(new DateTime(2014, 2, 1, 1, 1));
+		b.setEndTime(new DateTime(2014, 2, 2, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(a);
+		TimeLine.getInstance().addToTL(b);
+		assertEquals("A",Searcher.getInstance().searchDate(new DateTime(2014,1,1,1,1), new DateTime(2014,1,1,2,1)).get(0).getName());
+	}
+
+	@Test
+	public void test2() {
+		//test: deadline Task in range
+		Task c = new Task("C");
+		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
+		Task d = new Task("D");
+		d.setEndTime(new DateTime(2014, 1, 3, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(c);
+		TimeLine.getInstance().addToTL(d);
+		assertEquals("D",Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,2,1)).get(0).getName());
+	}
+	
+	public void test3() {
+		//test: deadline Task out of range
+		Task c = new Task("C");
+		c.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		c.setEndTime(new DateTime(2014, 1, 2, 1, 1));
+		Task d = new Task("D");
+		d.setEndTime(new DateTime(2014, 2, 3, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(c);
+		TimeLine.getInstance().addToTL(d);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,1,3,1,1), new DateTime(2014,1,3,1,2)).size());
+	}
+
+	@Test
+	public void test4() {
+		//test: task with only start time which is before the start time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 1, 1, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
+	}
+
+	@Test
+	public void test5() {
+		//test: task with only start time which is after the start time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 2, 2, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals("F",Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).get(0).getName());
+	}
+	
+	@Test
+	public void test6() {
+		//test: task with only start time which is after the end time being search.
+		Task e = new Task("E");
+		e.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		e.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task f = new Task("F");
+		f.setStartTime(new DateTime(2014, 3, 2, 1, 1));
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(e);
+		TimeLine.getInstance().addToTL(f);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
+	}
+	
+	@Test
+	public void test7() {
+		//test: floating task
+		Task g = new Task("G");
+		g.setStartTime(new DateTime(2014, 1, 3, 1, 1));
+		g.setEndTime(new DateTime(2014, 1, 4, 1, 1));
+		Task h = new Task("H");
+		TimeLine.getInstance().clear();
+		TimeLine.getInstance().addToTL(g);
+		TimeLine.getInstance().addToTL(h);
+		assertEquals(0 ,Searcher.getInstance().searchDate(new DateTime(2014,2,1,1,1), new DateTime(2014,2,3,1,1)).size());
 	}
 }
 ```
